Checkbox & radio: Fix checked color in high contrast when not disabled

--- a/packages/uswds-core/src/styles/mixins/helpers/checkbox-and-radio-colors.scss
+++ b/packages/uswds-core/src/styles/mixins/helpers/checkbox-and-radio-colors.scss
@@ -152,6 +152,10 @@
               color($input-active-color),
             inset 0 0 0 units($theme-input-select-border-width)
               color($input-bg-color);
+
+          @media (forced-colors: active) {
+            background-color: ButtonText;
+          }
         }
       }
       &:checked:disabled,
